force-app/main/default/objects/Account/fields/Compliance_Framework__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Framework__c</fullName>
    <description>Stores the compliance framework applicable to the Account, filtered dynamically by Industry via the dynamicPicklist LWC and Industry_Picklist_Config__mdt. Implemented as Text rather than Picklist to avoid org-wide picklist pollution with industry-specific values (e.g. HIPAA for Healthcare, SOX for Finance, SOC2 for Technology).</description>
    <label>Compliance Framework</label>
    <length>80</length>
    <type>Text</type>
</CustomField>