force-app/main/default/objects/Account/fields/Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count__c</fullName>
    <description>Employee count sourced from external enrichment API.</description>
    <label>Employee Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>