force-app/main/default/objects/Account/fields/Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Status__c</fullName>
    <description>Current status of the account data enrichment process.</description>
    <label>Enrichment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Enriched</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Not_Found</fullName>
                <label>Not Found</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>