force-app/main/default/objects/Account/fields/Last_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Last_Enriched__c</fullName>
    <description>Timestamp of the last successful or attempted enrichment from the external API.</description>
    <label>Last Enriched</label>
    <type>DateTime</type>
</CustomField>