force-app/main/default/objects/Account/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <description>Stores the industry-specific sub-industry classification for the Account. Values are dynamically filtered by the dynamicPicklist LWC based on Industry_Picklist_Config__mdt records. Implemented as Text rather than Picklist to avoid org-wide picklist pollution with industry-specific values.</description>
    <label>Sub Industry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>