force-app/main/default/objects/Account/recordTypes/Vendor_Review.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Review</fullName>
    <active>true</active>
    <description>Record type for Vendor Review accounts, separating them from other account types.</description>
    <label>Vendor Review Account</label>
</RecordType>